<resources>
	<string name="favourites">Favourites</string>
	<string name="remove_favourites">Remove Favourites</string>
	<string name="privacy_policy">Privacy policy</string>
	<string name="incorporated_on">Incorporated on %1$s</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="delete_recent_searches">Delete recent searches</string>
	<string name="are_you_sure_you_want_to_delete_all_recent_searches">Are you sure you want to delete all recent searches?</string>
	<string name="button_undo">undo</string>
	<string name="company_nature_of_business">Nature of business</string>
	<string name="no_data">No data</string>
	<string name="company_accounts">Accounts</string>
	<string name="company_annual_returns">Annual Returns</string>
	<string name="company_annual_returns_formatted_text">Last made up to %1$s</string>
	<string name="no_insolvency">No insolvency</string>
	<string name="title_activity_maps">Map</string>
	<string name="search_prompt">Search for companies</string>
	<string name="could_not_complete_search">Could not complete search. Check your network connection.</string>
	<string name="could_not_retrieve_company_info">Could not retrieve company information. Check your network connection.</string>
	<string name="no_recent_searches">You have no recent searches. Start by searching for a company above!</string>
	<string name="no_search_result">Your search did not return any companies. Please try another one</string>
	<string name="fab_toggle_favourite">Toggle Favourite</string>
	<string name="deleteButton">deleteButton</string>
	<string-array name="search_filter_options">
		<item>All</item>
		<item>Active</item>
		<item>Liquidation</item>
		<item>Open</item>
		<item>Dissolved</item>
	</string-array>
</resources>
