...
				}
			}
			LargeFloatingActionButton(
				modifier = Modifier
					.align(Alignment.BottomEnd)
					.padding(bottom = viewMarginLarge + paddingValues.calculateBottomPadding(), end = viewMarginLarge)
					.testTag("Fab Favourite"),
				onClick = onToggleFavouriteClickedLambda,
			) {
				Icon(
					painter = painterResource(
						if (model.isFavourite) R.drawable.ic_favorite_clear else R.drawable.ic_favorite
					),
...
	}

	LazyColumn(
		verticalArrangement = Arrangement.Top,
		modifier = Modifier
			.padding(paddingValues)
			.testTag("Company Screen Column")
	) {
		item {
			TitleLargeBoldText(
				text = company.companyNumber,
				modifier = Modifier
					.fillParentMaxWidth()
...
