...
							} else {
								component.setSearchMenuItemCollapsed()
							}
						}) {
							Icon(
								painter = painterResource(R.drawable.ic_search),
								contentDescription = "Search icon",
								tint = Colors.onPrimaryContainer
							)
						}
						IconButton(onClick = { component.onFavoritesClicked() }) {
							Icon(
								painter = painterResource(R.drawable.ic_favorite),
...
