<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="filing_history_details">Filing history details</string>
	<string name="could_not_retrieve_filing_history_info">Could not retrieve filing history information. Check your network connection.</string>
	<string name="could_not_retrieve_filing_history_document_info">Could not retrieve filing history document. Check your network connection.</string>
	<string name="filing_history_details_no_pdf_reader">Couldn\'t find PDF reader. Please install one from Google Play.</string>
	<string name="filing_history_details_wont_save_pdf">The PDF file won\'t be saved to the SD card.</string>
	<string-array name="filing_history_categories">
		<item>All</item>
		<item>Gazette</item>
		<item>Confirmation statement</item>
		<item>Accounts</item>
		<item>Annual returns</item>
		<item>Officers</item>
		<item>Address</item>
		<item>Capital</item>
		<item>Insolvency</item>
		<item>Other</item>
		<item>Incorporation</item>
		<item>Change of constitution</item>
		<item>Auditors</item>
		<item>Resolution</item>
		<item>Mortgage</item>
	</string-array>
</resources>