...
	) { paddingValues ->
		LazyColumn(
			verticalArrangement = Arrangement.Top,
			horizontalAlignment = Alignment.CenterHorizontally,
			modifier = modifier
				.padding(paddingValues)
				.testTag("OfficerDetailsColumn")
		) {
			item {
				TwoLineCard(
					firstLineString = "Name",
					secondLineString = selectedOfficer.name,
					Modifier.fillMaxWidth(1f)
...
